fix: stretch main component by height
Ensure main always fills available vertical space between header and footer.

--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -18,8 +18,13 @@
     --color-background: #0d1830;
   }
 
+  html,
   body {
-    @apply font-primary text-primary bg-background;
+    @apply h-full;
+  }
+
+  body {
+    @apply font-secondary text-primary bg-background;
   }
 
   a {
@@ -28,6 +33,10 @@
 }
 
 @layer utilities {
+  #root {
+    @apply flex h-full flex-col;
+  }
+
   .burger-toggle {
     @apply [&>div]:bg-background [&>div]:h-0 [&>div]:before:translate-y-0 [&>div]:before:rotate-45 [&>div]:after:translate-y-0 [&>div]:after:-rotate-45;
   }
